[package]
name = "scamp"
version = "0.1.4"
edition = "2021"
description = "A small animated cat that lives in your terminal."
authors = ["LordAizen1"]
license = "MIT"
repository = "https://github.com/LordAizen1/scamp-cat"
homepage = "https://github.com/LordAizen1/scamp-cat"
readme = "README.md"
keywords = ["terminal", "pet", "cat", "tui", "sixel"]
categories = ["command-line-utilities"]

[dependencies]
portable-pty = "0.8"
crossterm = "0.27"
anyhow = "1"
which = "6"
vte = "0.13"
dirs = "5"
rand = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
icy_sixel = "0.5"

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.2"
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
